voxalfa-formatter/src/tests/snapshots/voxalfa_formatter__tests__utils__test_space_distribution.snap
---
source: voxalfa-formatter/src/tests/utils.rs
expression: output
---
FILE: test_space_distribution

=== SOURCE ===

[#] verses={1}
[$] time={4,4} | voices={S}

---

[S] |d.r :m.f+1 !s.l :t,d-1 ||
[1] do re mi fa so la ti dooo


=== FORMATTED ===
[#] verses={1}

[$] time={4,4} | voices={S}

---

[S] |d   .r   :m   .f+1 !s   .l   :t   .d-1 ||

[1] do   re   mi   fa   so   la   ti   dooo
