voxalfa-formatter/src/tests/snapshots/voxalfa_formatter__tests__utils__test_space_formatting.snap
---
source: voxalfa-formatter/src/tests/utils.rs
expression: output
---
FILE: test_space_formatting

=== SOURCE ===

  [#] title=  "foo"
[#]  author={"bar",  "lorem"}  

[$] time={4, 4}    | voices={ S}

---

[S] |d :r !m :f ||



=== FORMATTED ===
[#] title="foo"
[#] author={"bar","lorem"}

[$] time={4,4} | voices={S}

---

[S] |d:r!m:f||
